--- a/index.html
+++ b/index.html
@@ -30,39 +30,82 @@
         </div>
     </nav>
     <main class="main-section">
-        <article>
-            <div class="info-section">
-                <h2>TALLER DE DISEÑO GRÁFICO</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel nunc nec metus consectetur faucibus. Sed faucibus ligula id dolor interdum, ac tincidunt est consectetur. Sed euismod velit vel metus faucibus, a convallis neque maximus. Mauris non arcu ac nisi varius consectetur. Sed non nisi vel urna convallis pretium.</p>
-                <button>Solicitar taller</button>
+        <!-- HERO -->
+        <article class="hero-section">
+          <div class="hero-content">
+
+            <div class="hero-texts-button ">
+                <div class="hero-text">TALLERES DE CERÁMICA</div>
+                <div class="hero-title">
+                    Te ayudamos
+                    <br />
+                    a desconectar
+                    <br />
+                    del ajetreo diario
+                </div>
+                <img src="./assets/svg/circle.PNG" alt="Decoración" class="hero-background-image">
+                <div >
+                    <button class="primary-enabled-button">Ver talleres</button>
+                </div>
             </div>
-            <div class="image-section">
-                <img src="./assets/img/products/hero_desktop.jpg" alt="">
+
+            <div class="hero-carousel">
+                <div class="carousel-wrapper">
+                    <img src="./assets/img/products/TallerCarrusel_1.jpg" alt="taller de modelado">
+                    <img src="./assets/img/products/TallerCarrusel_2.jpg" alt="taller de esmaltado">
+                    <img src="./assets/img/products/TallerCarrusel_3.jpg" alt="alfarería">
+                    <img src="./assets/img/products/TallerCarrusel_4.jpg" alt="para peques">
+                    <img src="./assets/img/products/TallerCarrusel_5.jpg" alt="engobes">
+                    <img src="./assets/img/products/TallerCarrusel_6.jpg" alt="set de desayuno">
+                </div>
             </div>
-             <button>VER MÁS</button>
+
+          </div>
         </article>
+
         <section class="features-section">
             <div class="feature">
-                <img src="./assets/img/Icon_1.jpg" alt="">
-                <h3>Piezas utilitarias</h3>
-                <p>Podrás utilizar tus creaciones en el día a día.</p>
+                <div class="feature-image">
+                    <img src="./assets/img/Icon_1c.png" alt="">
+                </div>
+                <div class="feature-text">
+                    <h3>Horarios Flexibles</h3>
+                    <p>Variedad de horarios para adaptarse a tu agenda.</p>
+                </div>
             </div>
+
             <div class="feature">
-                <img src="./assets/img/Icon_4.jpg" alt="">
-                <h3>Crea diseños únicos</h3>
-                <p>Deja que la intuición te guíe y crea algo único.</p>
+                <div class="feature-image">
+                    <img src="./assets/img/Icon_4c.png" alt="">
+                </div>
+                <div class="feature-text">
+                    <h3>Llévate tus creaciones</h3>
+                    <p>Diseña y crea piezas utilitarias y llévatelas a casa.</p>
+                </div>
             </div>
+
             <div class="feature">
-                <img src="./assets/img/Icon_3.jpg" alt="">
-                <h3>Conexión con la tierra</h3>
-                <p>Descubre una nueva y creativa forma de meditar.</p>
+                <div class="feature-image">
+                    <img src="./assets/img/Icon_3c.png" alt="">
+                </div>
+                <div class="feature-text">
+                    <h3>Todo Incluido</h3>
+                    <p>No necesitas comprar ni traer nada, te proporcionamos todo.</p>
+                </div>
             </div>
+
             <div class="feature">
-                <img src="./assets/img/Icon_2.jpg" alt="">
-                <h3>A tu alcance</h3>
-                <p>En el horario que quieras, no necesitas traer nada.</p>
+                <div class="feature-image">
+                    <img src="./assets/img/Icon_2c.png" alt="">
+                </div>
+                <div class="feature-text">
+                    <h3>Desconecta Creando</h3>
+                    <p>Descubre una nueva forma de desconectar y relajarte.</p>
+                </div>
             </div>
         </section>
+
+    <!--
         <section class="feedback-section">
             <p>“Asistir a los talleres de Bora Ceramics fue lo mejor que pude hacer por mi bienestar. El ambiente es acogedor y el personal es muy amable y paciente. Salí de allí sintiéndome renovada y orgullosa de mi creación.”</p>
             <p>Ana Gómez</p>
@@ -153,5 +196,24 @@
         </div>
         <p>© Bora ceramica 2024 | Created with ♡ by Aiala</p>
     </footer>
+
+    ---->
+
+
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const carouselWrapper = document.querySelector('.carousel-wrapper');
+    const images = document.querySelectorAll('.carousel-wrapper img');
+    const totalImages = images.length;
+    let currentIndex = 0;
+
+    setInterval(() => {
+        currentIndex = (currentIndex + 1) % totalImages;
+        const offset = -currentIndex * 600 / totalImages;
+        carouselWrapper.style.transform = `translateX(${offset}%)`;
+    }, 3000); // Cambia cada 3 segundos
+});
+</script>
+
 </body>
 </html>
