sección de feedback y workshops

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           </div>
         </article>
 
+         <!-- FEATURES -->
         <section class="features-section">
             <div class="feature">
                 <div class="feature-image">
@@ -105,11 +106,90 @@
             </div>
         </section>
 
-    <!--
+  
+         <!-- FEEDBACK -->
         <section class="feedback-section">
-            <p>“Asistir a los talleres de Bora Ceramics fue lo mejor que pude hacer por mi bienestar. El ambiente es acogedor y el personal es muy amable y paciente. Salí de allí sintiéndome renovada y orgullosa de mi creación.”</p>
-            <p>Ana Gómez</p>
+            <div class="feedback-title">
+                <h3>¿Días agotadores? Nuestros talleres de cerámica son el escape perfecto para tu mente y espíritu.</h3>
+                <img src="./assets/svg/line.png" alt="Decoración" class="feedback-background-image">
+            </div>
+            <div class="feedbacks">
+                    <div>
+                        <p>"Los talleres de Bora Cerámica fue lo mejor que pude hacer por mi bienestar. El ambiente es acogedor y la profe fantástica."</p>
+                        <img src="/assets/svg/ratingsstars.svg">
+                        <h3>Ana Gómez</h3>
+                    </div>
+                    <div>
+                        <p>"Participar en los talleres fue lo mejor para desconectar del estrés diario, repetiré sin duda, ¡totalmente recomendable!"</p>
+                        <img src="/assets/svg/ratingsstars.svg">
+                        <h3>Daniel Díaz</h3>
+                    </div>
+                    <div>
+                        <p>"¡Me encantan los talleres de Bora, una experiencia relajante y creativa! Salí  renovada y orgullosa de mi creación."</p>
+                        <img src="/assets/svg/ratingsstars.svg">
+                        <h3>Lucía Fernández</h3>
+                    </div>
+                </div>
+                <button class="primary-enabled-button">Ver horarios</button>
+            </div>
         </section>
+
+         <!-- WORKSHOPS -->
+        <section class="workshop-section">
+            <div class="section-title">
+                <h2>Próximos talleres</h2>
+            </div>
+            <div class="workshop">
+                <div class="workshop-image-left">
+                    <img src="./assets/img/products/taller_1.png" alt="">
+                </div>
+                <div class="workshop-content">
+                    <img class="expand-icon" src="./assets/svg/expand.svg" alt="">
+                    <div class="workshop-icon-text">
+                        <h3>Medita con barro</h3>
+                        <div class="expandable-text">
+                            <p>Te invitamos a descubrir una nueva forma de conectar con la tierra, encontrar tu paz.</p>
+                        </div>
+                    </div>
+                    <button class="secondary-enabled-button">></button>
+                </div>
+            </div>
+            <div class="workshop">
+                <div class="workshop-image-right">
+                    <img src="./assets/img/products/taller_2.png" alt="">
+                </div>
+                <div class="workshop-content">
+                    <img class="expand-icon" src="./assets/svg/expand.svg" alt="">
+                    <div class="workshop-icon-text">
+                        <h3>¡Crea tu set de desayuno!</h3>
+                        <div class="expandable-text">
+                            <p>Haz tus desayunos más divertidos con un set de taza, plato, cuchara y bowl hechos por ti.</p>
+                        </div>
+                    </div>
+                    <button class="secondary-enabled-button">></button>
+                </div>
+            </div>
+            
+
+            <div class="workshop">
+                <div class="workshop-image-left">
+                    <img src="./assets/img/products/taller_3.png" alt="">
+                </div>
+                <div class="workshop-content">
+                    <img class="expand-icon" src="./assets/svg/expand.svg" alt="">
+                    <div class="workshop-icon-text">
+                        <h3>Taller de esmaltado</h3>
+                        <div class="expandable-text">
+                            <p>En este taller te enseñamos a dar color a tus piezas, veremos las técnicas de engobe y esmaltado.</p>
+                        </div>
+                    </div>
+                    <button class="secondary-enabled-button">></button>
+                </div>
+            </div>
+          
+        </section>
+
+        <!--
         <section class="shop-section">
             <div class="shop">
                 <h3>¡Tenemos tienda!</h3>
@@ -120,6 +200,8 @@
                 <img src="./assets/img/products/shop.jpg" alt="">
             </div>
         </section>
+
+        <!-- PRODUCTS 
         <section class="products-section"></section>
         <section class="workshops-section">
             <h1>Nuestros talleres</h1>
