Sección workshops responsive, para tablet y desktop

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="workshop-image-left">
                     <img src="./assets/img/products/taller_1.png" alt="">
                 </div>
-                <div class="workshop-content">
+                <div class="workshop-content-left">
                     <img class="expand-icon" src="./assets/svg/expand.svg" alt="">
                     <div class="workshop-icon-text">
                         <h3>Medita con barro</h3>
@@ -158,7 +158,7 @@
                 <div class="workshop-image-right">
                     <img src="./assets/img/products/taller_2.png" alt="">
                 </div>
-                <div class="workshop-content">
+                <div class="workshop-content-right">
                     <img class="expand-icon" src="./assets/svg/expand.svg" alt="">
                     <div class="workshop-icon-text">
                         <h3>¡Crea tu set de desayuno!</h3>
@@ -175,7 +175,7 @@
                 <div class="workshop-image-left">
                     <img src="./assets/img/products/taller_3.png" alt="">
                 </div>
-                <div class="workshop-content">
+                <div class="workshop-content-left">
                     <img class="expand-icon" src="./assets/svg/expand.svg" alt="">
                     <div class="workshop-icon-text">
                         <h3>Taller de esmaltado</h3>
@@ -189,16 +189,19 @@
           
         </section>
 
-        <!--
+        <!-- SHOP -->
         <section class="shop-section">
             <div class="shop">
-                <h3>¡Tenemos tienda!</h3>
-                <p>Te invitamos a descubrir una nueva forma de conectar con la tierra, encontrar tu paz</p>
-                <button>Ver productos</button>
+                <div class="shop-image">
+                    <!--<img src="./assets/img/products/shop.jpg" alt="">-->
+                </div>
+                <div class="shop-content">
+                    <h3>¡Tenemos tienda!</h3>
+                    <p>Encuentra el regalo perfecto para ti o tus amigos.</p>
+                    <button>></button>
+                </div>
             </div>
-            <div class="image-section">
-                <img src="./assets/img/products/shop.jpg" alt="">
-            </div>
+           
         </section>
 
         <!-- PRODUCTS 
