Arreglo features, imagenes de fondo, carrusel, se añaden estados botones y más cards

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head> 
 <body>
     <nav class="navbar" >
-        <div class="icons">
+        <div class="menu-icon">
             <img src="./assets/svg/menu.svg">
         </div>
         <div class="logo">
-            <img src="./assets/img/Bora_Logo_brown.png" style="width:104px; height: 47px;">
+            <img src="./assets/img/Bora_Logo_brown.png">
         </div>
         <div class="nav-links">
             <p>TIENDA</p>
             <p>TALLERES</p>
             <p>SOBRE MI</p>
         </div>
-        <div class="icon">
+        <div class="icons">
             <p class="login-text">LOGIN</p>
             <img class="login-icon" src="./assets/svg/user.svg">
             <img src="./assets/svg/cart.svg">
@@ -65,7 +65,7 @@
 
          <!-- FEATURES -->
         <section class="features-section">
-            <div class="features-content">
+           <div class="features-content">
                 <div class="feature">
                     <div class="feature-image">
                         <img src="./assets/img/Icon_1c.png" alt="">
@@ -205,7 +205,95 @@
                     </div>
                 </div>
             </div>
-           
+        </section>
+
+        <!-- PRODUCTS -->
+        <section class="product-section">
+            <div class="section-title">
+                <h2>Lo más vendido</h2>
+            </div>
+            <div class="product-card-list">
+                <div class="product-card">
+                    <div class="card-image">
+                        <img class="image" src="/assets/img/products/product_1.png" />
+                    </div>
+                    <div class="card-text">
+                        <div class="card-title">Plato cerámico</div>
+                        <div class="card-info">Plato blanco de loza hecho a mano</div>
+                        <div class="card-price">23 € </div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="card-image">
+                        <img class="image" src="/assets/img/products/product_2.png" />
+                    </div>
+                    <div class="card-text">
+                        <div class="card-title">Jarrón de loza</div>
+                        <div class="card-info">Jarrón de loza con asas hecho a mano  </div>
+                        <div class="card-price">35 € </div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="card-image">
+                        <img class="image" src="/assets/img/products/product_3.png" />
+                    </div>
+                    <div class="card-text">
+                        <div class="card-title">Taza de gatito</div>
+                        <div class="card-info">Taza de desayuno con cara de gatito</div>
+                        <div class="card-price">21 €</div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="card-image">
+                        <img class="image" src="/assets/img/products/product_4.png" />
+                    </div>
+                    <div class="card-text">
+                        <div class="card-title">Taza de café</div>
+                        <div class="card-info">Taza de café de porcelana hecha a mano</div>
+                        <div class="card-price">16 €</div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="card-image">
+                        <img class="image" src="/assets/img/products/product_5.png" />
+                    </div>
+                    <div class="card-text">
+                        <div class="card-title">Lámpara de mesa</div>
+                        <div class="card-info">Lámpara de diseño en blanco</div>
+                        <div class="card-price">45 €</div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="card-image">
+                        <img class="image" src="/assets/img/products/product_6.png" />
+                    </div>
+                    <div class="card-text">
+                        <div class="card-title">Taza cono</div>
+                        <div class="card-info">Taza de café de porcelana hecha a mano</div>
+                        <div class="card-price">12 €</div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="card-image">
+                        <img class="image" src="/assets/img/products/product_7.png" />
+                    </div>
+                    <div class="card-text">
+                        <div class="card-title">Jarrón aro</div>
+                        <div class="card-info">Florero blanco con forma de aro</div>
+                        <div class="card-price">22 €</div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="card-image">
+                        <img class="image" src="/assets/img/products/product_8.png" />
+                    </div>
+                    <div class="card-text">
+                        <div class="card-title">Vajilla verde</div>
+                        <div class="card-info">Juego de plato, bowl y vaso verde esmeralda</div>
+                        <div class="card-price">55 €</div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!--NEWSLETTER-->
@@ -215,7 +303,7 @@
                     <img src="./assets/img/products/newsletter.png" alt="">
                 </div>
                 <div class="newsletter-content">
-                    <h3>¡Mantente al al día con nuestra newsletter!</h3>
+                    <h3>¡Mantente al día con nuestra newsletter!</h3>
                     <div class="text-button">
                         <p>Sé el primero en conocer las novedades de nuestra tienda y los próximos talleres.</p>
                         <input class="input">
