--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             <img src="./assets/svg/menu.svg">
         </div>
         <div class="logo">
-            <img src="./assets/img/Bora_Logo_Onlytext.png">
+            <img src="./assets/img/Bora_Logo_Onlytext.png" id="refresh-logo">
         </div>
         <div class="nav-links">
-            <p>TIENDA</p>
-            <p>TALLERES</p>
-            <p>SOBRE MI</p>
+            <p class="nav-link active">HOME</p>
+            <p class="nav-link">TIENDA</p>
+            <p class="nav-link">TALLERES</p>
+            <p class="nav-link">SOBRE MI</p>
         </div>
         <div class="icons">
             <p class="login-text">LOGIN</p>
@@ -162,7 +163,7 @@
                                 </p>
                             </div>
                         </div>
-                        <button class="secondary-enabled-button">></button>
+                        <button class="secondary-enabled-button"></button>
                     </div>
                     <div class="expandable-text">
                         <p>Te invitamos a descubrir una nueva forma de conectar con la tierra, encontrar tu paz.</p>
@@ -183,7 +184,7 @@
                                     ti.</p>
                             </div>
                         </div>
-                        <button class="secondary-enabled-button">></button>
+                        <button class="secondary-enabled-button"></button>
                     </div>
                     <div class="expandable-text">
                         <p>Haz tus desayunos más divertidos con un set de taza, plato, cuchara y bowl hechos por ti.</p>
@@ -206,7 +207,7 @@
                                     y esmaltado.</p>
                             </div>
                         </div>
-                        <button class="secondary-enabled-button">></button>
+                        <button class="secondary-enabled-button"></button>
                     </div>
                     <div class="expandable-text">
                         <p>En este taller te enseñamos a dar color a tus piezas, veremos las técnicas de engobe y
@@ -226,7 +227,7 @@
                     <h3>¡Tenemos tienda!</h3>
                     <div class="text-button">
                         <p>Encuentra el regalo perfecto para ti o tus amigos.</p>
-                        <button class="secondary-enabled-button">></button>
+                        <button class="secondary-enabled-button"></button>
                     </div>
                 </div>
             </div>
@@ -238,92 +239,144 @@
                 <h2>Lo más vendido</h2>
             </div>
             <div class="carousel-container">
-            <button class="carousel-button left-button">←</button>
-            <div class="product-card-list">
-                <div class="product-card">
-                    <div class="card-image">
-                        <img class="image" src="/assets/img/products/product_1.png" />
+                <button class="carousel-button left-button">
+                    <img src="./assets/svg/expand.svg" alt="Scroll Left">
+                </button>
+                <div class="product-card-list">
+                    <div class="product-card">
+                        <div class="card-image">
+                            <img class="image" src="/assets/img/products/product_1.png" />
+                            <div class="overlay-buttons">
+                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                        class="cart-icon" alt="añadir al carrito"></button>
+                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                        class="heart-icon" alt="Añadir a favoritos"></button>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <div class="card-title">Plato cerámico</div>
+                            <div class="card-info">Plato blanco de loza hecho a mano</div>
+                            <div class="card-price">23 € </div>
+                        </div>
                     </div>
-                    <div class="card-text">
-                        <div class="card-title">Plato cerámico</div>
-                        <div class="card-info">Plato blanco de loza hecho a mano</div>
-                        <div class="card-price">23 € </div>
+                    <div class="product-card">
+                        <div class="card-image">
+                            <img class="image" src="/assets/img/products/product_2.png" />
+                            <div class="overlay-buttons">
+                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                        class="cart-icon" alt="añadir al carrito"></button>
+                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                        class="heart-icon" alt="Añadir a favoritos"></button>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <div class="card-title">Jarrón de loza</div>
+                            <div class="card-info">Jarrón de loza con asas hecho a mano </div>
+                            <div class="card-price">35 € </div>
+                        </div>
                     </div>
+                    <div class="product-card">
+                        <div class="card-image">
+                            <img class="image" src="/assets/img/products/product_3.png" />
+                            <div class="overlay-buttons">
+                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                        class="cart-icon" alt="añadir al carrito"></button>
+                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                        class="heart-icon" alt="Añadir a favoritos"></button>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <div class="card-title">Taza de gatito</div>
+                            <div class="card-info">Taza de desayuno con cara de gatito</div>
+                            <div class="card-price">21 €</div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="card-image">
+                            <img class="image" src="/assets/img/products/product_4.png" />
+                            <div class="overlay-buttons">
+                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                        class="cart-icon" alt="añadir al carrito"></button>
+                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                        class="heart-icon" alt="Añadir a favoritos"></button>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <div class="card-title">Taza de café</div>
+                            <div class="card-info">Taza de café de porcelana hecha a mano</div>
+                            <div class="card-price">16 €</div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="card-image">
+                            <img class="image" src="/assets/img/products/product_5.png" />
+                            <div class="overlay-buttons">
+                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                        class="cart-icon" alt="añadir al carrito"></button>
+                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                        class="heart-icon" alt="Añadir a favoritos"></button>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <div class="card-title">Lámpara de mesa</div>
+                            <div class="card-info">Lámpara de diseño en blanco</div>
+                            <div class="card-price">45 €</div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="card-image">
+                            <img class="image" src="/assets/img/products/product_6.png" />
+                            <div class="overlay-buttons">
+                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                        class="cart-icon" alt="añadir al carrito"></button>
+                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                        class="heart-icon" alt="Añadir a favoritos"></button>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <div class="card-title">Taza cono</div>
+                            <div class="card-info">Taza de café de porcelana hecha a mano</div>
+                            <div class="card-price">12 €</div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="card-image">
+                            <img class="image" src="/assets/img/products/product_7.png" />
+                            <div class="overlay-buttons">
+                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                        class="cart-icon" alt="añadir al carrito"></button>
+                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                        class="heart-icon" alt="Añadir a favoritos"></button>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <div class="card-title">Jarrón aro</div>
+                            <div class="card-info">Florero blanco con forma de aro</div>
+                            <div class="card-price">22 €</div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="card-image">
+                            <img class="image" src="/assets/img/products/product_8.png" />
+                            <div class="overlay-buttons">
+                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                        class="cart-icon" alt="añadir al carrito"></button>
+                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                        class="heart-icon" alt="Añadir a favoritos"></button>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <div class="card-title">Vajilla verde</div>
+                            <div class="card-info">Juego de plato, bowl y vaso verde esmeralda</div>
+                            <div class="card-price">55 €</div>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="product-card">
-                    <div class="card-image">
-                        <img class="image" src="/assets/img/products/product_2.png" />
-                    </div>
-                    <div class="card-text">
-                        <div class="card-title">Jarrón de loza</div>
-                        <div class="card-info">Jarrón de loza con asas hecho a mano </div>
-                        <div class="card-price">35 € </div>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="card-image">
-                        <img class="image" src="/assets/img/products/product_3.png" />
-                    </div>
-                    <div class="card-text">
-                        <div class="card-title">Taza de gatito</div>
-                        <div class="card-info">Taza de desayuno con cara de gatito</div>
-                        <div class="card-price">21 €</div>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="card-image">
-                        <img class="image" src="/assets/img/products/product_4.png" />
-                    </div>
-                    <div class="card-text">
-                        <div class="card-title">Taza de café</div>
-                        <div class="card-info">Taza de café de porcelana hecha a mano</div>
-                        <div class="card-price">16 €</div>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="card-image">
-                        <img class="image" src="/assets/img/products/product_5.png" />
-                    </div>
-                    <div class="card-text">
-                        <div class="card-title">Lámpara de mesa</div>
-                        <div class="card-info">Lámpara de diseño en blanco</div>
-                        <div class="card-price">45 €</div>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="card-image">
-                        <img class="image" src="/assets/img/products/product_6.png" />
-                    </div>
-                    <div class="card-text">
-                        <div class="card-title">Taza cono</div>
-                        <div class="card-info">Taza de café de porcelana hecha a mano</div>
-                        <div class="card-price">12 €</div>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="card-image">
-                        <img class="image" src="/assets/img/products/product_7.png" />
-                    </div>
-                    <div class="card-text">
-                        <div class="card-title">Jarrón aro</div>
-                        <div class="card-info">Florero blanco con forma de aro</div>
-                        <div class="card-price">22 €</div>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="card-image">
-                        <img class="image" src="/assets/img/products/product_8.png" />
-                    </div>
-                    <div class="card-text">
-                        <div class="card-title">Vajilla verde</div>
-                        <div class="card-info">Juego de plato, bowl y vaso verde esmeralda</div>
-                        <div class="card-price">55 €</div>
-                    </div>
-                </div>
-               
+                <button class="carousel-button right-button">
+                    <img src="./assets/svg/expand.svg" alt="Scroll Right">
+                </button>
             </div>
-            <button class="carousel-button right-button">→</button>
-        </div>
         </section>
 
         <!--NEWSLETTER-->
@@ -388,7 +441,12 @@
 
 
         <script>
-            //Carrusel
+            //Recargar la página al clicar el logo
+            document.getElementById('refresh-logo').addEventListener('click', function () {
+                location.reload(); // Recarga la página actual
+            });
+
+            //Carrusel del hero
             document.addEventListener("DOMContentLoaded", function () {
                 const carouselWrapper = document.querySelector('.carousel-wrapper');
                 const images = document.querySelectorAll('.carousel-wrapper img');
@@ -424,28 +482,43 @@
             });
 
             //desplazamiento cards en desktop
-            document.addEventListener('DOMContentLoaded', function() {
-            const productCardList = document.querySelector('.product-card-list');
-            const leftButton = document.querySelector('.left-button');
-            const rightButton = document.querySelector('.right-button');
+            document.addEventListener('DOMContentLoaded', function () {
+                const productCardList = document.querySelector('.product-card-list');
+                const leftButton = document.querySelector('.left-button');
+                const rightButton = document.querySelector('.right-button');
 
-            // Obteniendo el ancho de una sola card (incluyendo gap)
-            const cardWidth = document.querySelector('.product-card').offsetWidth + parseInt(getComputedStyle(productCardList).gap);
+                // Obteniendo el ancho de una sola card (incluyendo gap)
+                const cardWidth = document.querySelector('.product-card').offsetWidth + parseInt(getComputedStyle(productCardList).gap);
 
-            leftButton.addEventListener('click', () => {
-                productCardList.scrollBy({
-                    left: -cardWidth * 5, // Desplaza 5 cards hacia la izquierda
-                    behavior: 'smooth'
+                leftButton.addEventListener('click', () => {
+                    productCardList.scrollBy({
+                        left: -cardWidth * 5, // Desplaza 5 cards hacia la izquierda
+                        behavior: 'smooth'
+                    });
+                });
+
+                rightButton.addEventListener('click', () => {
+                    productCardList.scrollBy({
+                        left: cardWidth * 5, // Desplaza 5 cards hacia la derecha
+                        behavior: 'smooth'
+                    });
                 });
             });
 
-            rightButton.addEventListener('click', () => {
-                productCardList.scrollBy({
-                    left: cardWidth * 5, // Desplaza 5 cards hacia la derecha
-                    behavior: 'smooth'
+            //Activar o desactivar links de navegacion
+            document.addEventListener('DOMContentLoaded', function () {
+                const navLinks = document.querySelectorAll('.nav-link');
+
+                navLinks.forEach(link => {
+                    link.addEventListener('click', function () {
+                        // Remover la clase 'active' de todos los enlaces
+                        navLinks.forEach(link => link.classList.remove('active'));
+
+                        // Agregar la clase 'active' al enlace clicado
+                        this.classList.add('active');
+                    });
                 });
             });
-        });
 
         </script>
 
