arreglo en las rutas de las imágenes

--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
                 <div>
                     <p>"Los talleres de Bora Cerámica fue lo mejor que pude hacer por mi bienestar. El ambiente es
                         acogedor y la profe fantástica."</p>
-                    <img src="/assets/svg/ratingsstars.svg">
+                    <img src="assets/svg/ratingsstars.svg">
                     <h3>Ana Gómez</h3>
                 </div>
                 <div>
                     <p>"¡Me encantan los talleres de Bora, una experiencia relajante y creativa! Salí renovada y
                         orgullosa de mi creación."</p>
-                    <img src="/assets/svg/ratingsstars.svg">
+                    <img src="assets/svg/ratingsstars.svg">
                     <h3>Lucía Fernández</h3>
                 </div>
                 <div>
                     <p>"Participar en los talleres fue lo mejor para desconectar del estrés diario, repetiré sin duda,
                         ¡totalmente recomendable!"</p>
-                    <img src="/assets/svg/ratingsstars.svg">
+                    <img src="assets/svg/ratingsstars.svg">
                     <h3>Daniel Díaz</h3>
                 </div>
             </div>
@@ -245,11 +245,11 @@
                 <div class="product-card-list">
                     <div class="product-card">
                         <div class="card-image">
-                            <img class="image" src="/assets/img/products/product_1.png" />
+                            <img class="image" src="assets/img/products/product_1.png" />
                             <div class="overlay-buttons">
-                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                <button class="primary-enabled-button"> <img src="assets/svg/cart.svg"
                                         class="cart-icon" alt="añadir al carrito"></button>
-                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                <button class="secondary-enabled-button"><img src="assets/svg/heart.svg"
                                         class="heart-icon" alt="Añadir a favoritos"></button>
                             </div>
                         </div>
@@ -261,11 +261,11 @@
                     </div>
                     <div class="product-card">
                         <div class="card-image">
-                            <img class="image" src="/assets/img/products/product_2.png" />
+                            <img class="image" src="assets/img/products/product_2.png" />
                             <div class="overlay-buttons">
-                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                <button class="primary-enabled-button"> <img src="assets/svg/cart.svg"
                                         class="cart-icon" alt="añadir al carrito"></button>
-                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                <button class="secondary-enabled-button"><img src="assets/svg/heart.svg"
                                         class="heart-icon" alt="Añadir a favoritos"></button>
                             </div>
                         </div>
@@ -277,11 +277,11 @@
                     </div>
                     <div class="product-card">
                         <div class="card-image">
-                            <img class="image" src="/assets/img/products/product_3.png" />
+                            <img class="image" src="assets/img/products/product_3.png" />
                             <div class="overlay-buttons">
-                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                <button class="primary-enabled-button"> <img src="assets/svg/cart.svg"
                                         class="cart-icon" alt="añadir al carrito"></button>
-                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                <button class="secondary-enabled-button"><img src="assets/svg/heart.svg"
                                         class="heart-icon" alt="Añadir a favoritos"></button>
                             </div>
                         </div>
@@ -293,11 +293,11 @@
                     </div>
                     <div class="product-card">
                         <div class="card-image">
-                            <img class="image" src="/assets/img/products/product_4.png" />
+                            <img class="image" src="assets/img/products/product_4.png" />
                             <div class="overlay-buttons">
-                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                <button class="primary-enabled-button"> <img src="assets/svg/cart.svg"
                                         class="cart-icon" alt="añadir al carrito"></button>
-                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                <button class="secondary-enabled-button"><img src="assets/svg/heart.svg"
                                         class="heart-icon" alt="Añadir a favoritos"></button>
                             </div>
                         </div>
@@ -309,11 +309,11 @@
                     </div>
                     <div class="product-card">
                         <div class="card-image">
-                            <img class="image" src="/assets/img/products/product_5.png" />
+                            <img class="image" src="assets/img/products/product_5.png" />
                             <div class="overlay-buttons">
-                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                <button class="primary-enabled-button"> <img src="assets/svg/cart.svg"
                                         class="cart-icon" alt="añadir al carrito"></button>
-                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                <button class="secondary-enabled-button"><img src="assets/svg/heart.svg"
                                         class="heart-icon" alt="Añadir a favoritos"></button>
                             </div>
                         </div>
@@ -325,11 +325,11 @@
                     </div>
                     <div class="product-card">
                         <div class="card-image">
-                            <img class="image" src="/assets/img/products/product_6.png" />
+                            <img class="image" src="assets/img/products/product_6.png" />
                             <div class="overlay-buttons">
-                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                <button class="primary-enabled-button"> <img src="assets/svg/cart.svg"
                                         class="cart-icon" alt="añadir al carrito"></button>
-                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                <button class="secondary-enabled-button"><img src="assets/svg/heart.svg"
                                         class="heart-icon" alt="Añadir a favoritos"></button>
                             </div>
                         </div>
@@ -341,11 +341,11 @@
                     </div>
                     <div class="product-card">
                         <div class="card-image">
-                            <img class="image" src="/assets/img/products/product_7.png" />
+                            <img class="image" src="assets/img/products/product_7.png" />
                             <div class="overlay-buttons">
-                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                <button class="primary-enabled-button"> <img src="assets/svg/cart.svg"
                                         class="cart-icon" alt="añadir al carrito"></button>
-                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                <button class="secondary-enabled-button"><img src="assets/svg/heart.svg"
                                         class="heart-icon" alt="Añadir a favoritos"></button>
                             </div>
                         </div>
@@ -357,11 +357,11 @@
                     </div>
                     <div class="product-card">
                         <div class="card-image">
-                            <img class="image" src="/assets/img/products/product_8.png" />
+                            <img class="image" src="assets/img/products/product_8.png" />
                             <div class="overlay-buttons">
-                                <button class="primary-enabled-button"> <img src="/assets/svg/cart.svg"
+                                <button class="primary-enabled-button"> <img src="assets/svg/cart.svg"
                                         class="cart-icon" alt="añadir al carrito"></button>
-                                <button class="secondary-enabled-button"><img src="/assets/svg/heart.svg"
+                                <button class="secondary-enabled-button"><img src="assets/svg/heart.svg"
                                         class="heart-icon" alt="Añadir a favoritos"></button>
                             </div>
                         </div>
@@ -426,10 +426,10 @@
                     </div>
                 </div>
                 <div class="footer-social">
-                    <img src="/assets/svg/facebook.svg" alt="Facebook logo" class="social-icon">
-                    <img src="/assets/svg/twitter.svg" alt="Twitter logo" class="social-icon">
-                    <img src="/assets/svg/instagram.svg" alt="Instagram logo" class="social-icon">
-                    <img src="/assets/svg/youtube.svg" alt="YouTube logo" class="social-icon">
+                    <img src="assets/svg/facebook.svg" alt="Facebook logo" class="social-icon">
+                    <img src="assets/svg/twitter.svg" alt="Twitter logo" class="social-icon">
+                    <img src="assets/svg/instagram.svg" alt="Instagram logo" class="social-icon">
+                    <img src="assets/svg/youtube.svg" alt="YouTube logo" class="social-icon">
                 </div>
 
                 <div class="footer-credits">
